# dian_person_rut_status

./: .gitignore  README.md  pyproject.toml  test.txt
core/: dian_rut.py  main.py
core/custom/: types.py
dian_person_rut_status/: muisca.py
